# lipidoz

./: .gitignore  LipidOz.py  MANIFEST.in  README.md  build.ps1  lipidoz.icns  requirements.txt  setup.cfg
.github/workflows/: publish-to-pypi.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  isotope_scoring.rst  ml.rst  workflows.rst
docs/source/guides/: installation.rst  iso_dist_analysis.rst  lipidoz_gui.rst  machine_learning.rst
docs/source/project_info/: citing.rst  contributing.rst
lipidoz/: __init__.py  __main__.py  _cli.py  _pyliquid.py  _uimf.py  _util.py  isotope_scoring.py  workflows.py
lipidoz/gui/: __init__.py  __main__.py  _config.py  app.py  processing_window.py  results_window.py  setup_window.py
lipidoz/ml/: __init__.py  data.py  view.py
lipidoz/ml/models/: __init__.py  resnet18.py
lipidoz/workflows/: __init__.py  _isotope_scoring.py  _ml.py
