[metadata]
name = lipidoz
version = attr: lipidoz.__init__.__version__
author = Dylan Ross
author_email = dylan.ross@pnnl.gov
description = Python utility for determination of lipid double bond position location from OzID data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PNNL-m-q/lipidoz
project_urls =
    Bug Tracker = https://github.com/PNNL-m-q/lipidoz/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.12
packages = find:
install_requires =
    mzapy
    matplotlib
    numpy
    scipy
    xlsxwriter
    pandas
    scikit-learn
    scikit_image
    torch
    torchvision
